--- a/assets/css/customs.css
+++ b/assets/css/customs.css
@@ -51,3 +51,37 @@
     background-color: #F5A1A5 !important;
     color: #000000 !important;
 }
+
+#fscreen {
+    visibility: visible;
+  }
+
+#fscreen:fullscreen {
+    display: none;
+  }
+
+  @media all and (display-mode: fullscreen) {
+    .sidebar-mini.sidenav-toggled .main-content.side-content {
+        margin-inline-start: 0 !important;
+    }
+  }
+
+
+#grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    row-gap: 18px;
+    padding: 15px;
+  }
+  
+  #grid-container > div {
+    font-size: 14px;
+    text-align: center;
+    color: var(--color);
+  }
+
+.icon-group {
+    font-size: 38px;
+    display: block;
+    margin-bottom: -8px;
+}
